rework colors to avoid too much transparency and unconsistency

--- a/src/app/common/components/bubble/bubble.scss
+++ b/src/app/common/components/bubble/bubble.scss
@@ -8,18 +8,18 @@ div {
   opacity: 1;
 
   &.grey {
-    background: $light-grey;
+    background: $light-gray;
   }
 
   &.orange {
-    background: $accent-orange-strong;
+    background: $pastel-orange;
   }
 
   &.red {
-    background: $accent-red-strong;
+    background: $pastel-red;
   }
 
   &.green {
-    background: $accent-green-strong;
+    background: $pastel-green;
   }
 }
