--- a/src/app/common/components/content-window/content-window.scss
+++ b/src/app/common/components/content-window/content-window.scss
@@ -30,26 +30,26 @@
         margin: 0;
 
         &.orange {
-          background: $gradient-orange;
+          background: $pastel-orange;
         }
 
         &.green {
-          background: $gradient-green-alt;
+          background: $pastel-green;
         }
 
         &.red {
-          background: $gradient-red;
+          background: $pastel-red;
         }
 
         &.rainbow {
           background: linear-gradient(
             45deg,
-            $gradient-red 0%,
-            $gradient-red 33.3%,
-            $gradient-orange 33.3%,
-            $gradient-orange 66.6%,
-            $gradient-green-alt 66.6%,
-            $gradient-green-alt 100%
+            $pastel-red 0%,
+            $pastel-red 33.3%,
+            $pastel-orange 33.3%,
+            $pastel-orange 66.6%,
+            $pastel-green 66.6%,
+            $pastel-green 100%
           );
         }
       }
