--- a/src/app/features/experiences/components/details/details.scss
+++ b/src/app/features/experiences/components/details/details.scss
@@ -41,7 +41,7 @@
           line-height: 1.4;
 
           &::marker {
-            color: #ff920a;
+            color: $orange;
             transform: skewX(45deg);
           }
         }
@@ -66,7 +66,7 @@
     justify-content: center;
     height: 100%;
     font-style: italic;
-    color: $gray-dark;
+    color: $dark-gray;
     font-size: $font-size-lg;
     font-weight: $font-weight-bold;
   }
