--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
   font-family:
     -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
     sans-serif;
-  color: $dark-grey;
+  color: $dark-gray;
 }
 
 *,
@@ -35,12 +35,12 @@
 a {
   text-decoration: none;
   font-weight: $font-weight-extra-bold;
-  color: $gradient-red;
+  color: $pastel-red;
   font-size: $font-size-lg;
   cursor: pointer;
 
   &:hover {
-    color: $os-red;
+    color: $red;
     transition: color $timer-fast;
   }
 }
@@ -91,18 +91,18 @@ body {
   height: 100%;
   background: linear-gradient(
     45deg,
-    $gradient-orange 0%,
-    $gradient-orange 16.6%,
-    $gradient-red 16.6%,
-    $gradient-red 33.2%,
-    $gradient-green-alt 33.2%,
-    $gradient-green-alt 50%,
-    $gradient-gray 50%,
-    $gradient-gray 66.6%,
-    $gradient-medium-gray 66.6%,
-    $gradient-medium-gray 83.2%,
-    $gradient-light-gray 83.2%,
-    $gradient-light-gray 100%
+    $pastel-orange 0%,
+    $pastel-orange 16.6%,
+    $pastel-red 16.6%,
+    $pastel-red 33.2%,
+    $pastel-green 33.2%,
+    $pastel-green 50%,
+    $pastel-blue-gray 50%,
+    $pastel-blue-gray 66.6%,
+    $pastel-medium-gray 66.6%,
+    $pastel-medium-gray 83.2%,
+    $pastel-light-gray 83.2%,
+    $pastel-light-gray 100%
   );
   position: relative;
 }
@@ -114,9 +114,10 @@ body::after {
   right: 5%;
   transform: translateY(-50%);
   width: 30%;
-  height: 30%;
+  height: auto;
+  min-height: 30%;
   background: url('assets/logo/logo.svg') no-repeat center right;
   background-size: contain;
-  opacity: 0.75;
+  opacity: 1;
   pointer-events: none;
 }
